[package]
name = "kvs"
version = "0.1.0"
authers = ["howz97 <964701944@qq.com>"]
description = "This is a key value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
clap = "3.1.11"