[package]
name = "kvs"
version = "0.1.0"
authers = ["howz97 <964701944@qq.com>"]
description = "This is a key value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
clap = "3.1"
failure = "0.1.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.2"
sled = "0.34"
crossbeam = "0.8"
num_cpus = "1.13"
rayon = "1.5"
dashmap = "5.3"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"

[[bench]]
name = "benches"
harness = false